# shirt

./: .gitignore  README.md  irt.py  pyproject.toml
.ipynb_checkpoints/: scratch-checkpoint.py
baseline_deft/: deft.py  process_data.py  retrieve_finetuning_data.py
data/: Untitled.ipynb  data.txt  data_deft.txt
fine_tune_and_evaluate/: pipeline.py
ft_data/: deft_n-target=10_n-aux=200_leaderboard_bbh_boolean_expressions.json  deft_n-target=10_n-aux=200_leaderboard_bbh_causal_judgement.json  deft_n-target=10_n-aux=200_leaderboard_bbh_date_understanding.json  deft_n-target=10_n-aux=200_leaderboard_bbh_disambiguation_qa.json  deft_n-target=10_n-aux=200_leaderboard_bbh_formal_fallacies.json  deft_n-target=10_n-aux=200_leaderboard_bbh_geometric_shapes.json  deft_n-target=10_n-aux=200_leaderboard_bbh_hyperbaton.json  deft_n-target=10_n-aux=200_leaderboard_bbh_logical_deduction_five_objects.json  deft_n-target=10_n-aux=200_leaderboard_bbh_logical_deduction_seven_objects.json  deft_n-target=10_n-aux=200_leaderboard_bbh_logical_deduction_three_objects.json  deft_n-target=10_n-aux=200_leaderboard_bbh_movie_recommendation.json  deft_n-target=10_n-aux=200_leaderboard_bbh_navigate.json  deft_n-target=10_n-aux=200_leaderboard_bbh_object_counting.json  deft_n-target=10_n-aux=200_leaderboard_bbh_penguins_in_a_table.json  deft_n-target=10_n-aux=200_leaderboard_bbh_reasoning_about_colored_objects.json  deft_n-target=10_n-aux=200_leaderboard_bbh_ruin_names.json  deft_n-target=10_n-aux=200_leaderboard_bbh_salient_translation_error_detection.json  (+151 more)
irt_models/: leaderboard_bbh_navigate  (+23 more)
(+221 files in other folders)
